[project]
name = "ebm-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "f5-tts==1.1.4",
    "numpy>=1.26.4",
    "pytorch-lightning>=2.5.1.post0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]